wip: initialize angular project

--- a/src/app/components/layouts/home-layout/home-layout.component.html
+++ b/src/app/components/layouts/home-layout/home-layout.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-impresoft-light dark:bg-impresoft-dark relative flex min-h-screen flex-col justify-between bg-cover bg-top-right bg-no-repeat p-4"
+  class="bg-dev-quest-light dark:bg-dev-quest-dark relative flex min-h-screen flex-col justify-between bg-cover bg-top-right bg-no-repeat p-4"
 >
   <router-outlet />
   <app-footer />
