refactor: remove product module and related components, add bug and card models

--- a/src/app/pages/my-dashboard-page/my-dashboard-page.component.html
+++ b/src/app/pages/my-dashboard-page/my-dashboard-page.component.html
@@ -6,15 +6,11 @@
   <app-card-counter title="components.postCard.title" icon="pi-file" type="post" />
 
   <!-- Charts Section -->
-  <div class="col-span-full grid grid-cols-1 gap-4 md:grid-cols-2">
-    <app-product-category-chart type="doughnut" />
-  </div>
+  <div class="col-span-full grid grid-cols-1 gap-4 md:grid-cols-2"> </div>
 
   <!-- Orders Charts -->
-  <div class="col-span-full grid grid-cols-1 gap-4 md:grid-cols-2">
-  </div>
+  <div class="col-span-full grid grid-cols-1 gap-4 md:grid-cols-2"> </div>
 
   <!-- Table Section -->
-  <div class="col-span-full">
-  </div>
+  <div class="col-span-full"> </div>
 </div>
